added many, many comments

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -11,7 +11,7 @@
     <title>About Me</title>
 </head>
 <body>
-    <header class="Heading">
+    <header class="Heading"><!--This is the copy/pasted navbar for each page that links it all together-->
     <div class="Logo">
         <!--this to be the logo-->
         <Span class="initalsLogo">
@@ -33,13 +33,13 @@
         <section class ="aboutMeTitleSection"> <!--We need a blurb for the front here, "Hi I'm Martin"-->
             <h2 class ="AboutMeTitle"> About Me</h2>
         </section>
-        <section class="AboutmeBlurbSection">    
+        <section class="AboutmeBlurbSection"><!--So here is the place where I write the blurb about me. it needs to be a bit longer, maybe add filler text?-->
             <h3 class ="JobTitle">Web Developer</h3>
-            <div class ="AboutMeBlurb">Since 2021&nbsp;&ndash;&nbsp;Completing coder academy fast track bootcamp and just beginning my journey as a web developer. I expect to finish in February and look forward ot working on your projects</div>
+            <div class ="AboutMeBlurb">Since 2021&nbsp;&ndash;&nbsp;Completing coder academy fast track bootcamp in Sydney and just beginning my journey as a web developer. I expect to finish in February and look forward ot working on your projects</div>
            
         </section>
             
-        <section class ="Education"><!--This has to go to the About Me Page-->
+        <section class ="Education"><!--list of degrees-->
            <H3>Education</H3>
             <p>August 2021&nbsp;&ndash;&nbsp;Enrolled in Coder Academy Fast Track Bootcamp</p>
             <p>September 2020&nbsp;&ndash;&nbsp;Competed Graduate Diploma of Cybersecurity at Edith Cowan University</p>
@@ -48,10 +48,10 @@
             <p>April 2011&nbsp;&ndash;&nbsp;Completed Bachelor of Science with Honours, majoring in microbiology</p>
         </section>
 
-        <section class ="Skills">
+        <section class ="Skills"><!--My list of skills. I don't know how many irrelevant ones I should add here-->
             <H3>Skills</H3>
                 <ul class="ListOfSkills">
-                    <li>html</li>
+                    <li>HTML</li>
                     <li>CSS</li>
                     <li>Blender</li>
                     <li>Unity</li>
@@ -60,7 +60,15 @@
 
         <section class ="Experience">
             <H3>Experience</H3>
-            <div class ="experience blurb">Kinda Need to get some
+            <div class ="experience blurb">
+                <p>Need to get some</p><!--well thats a bit sad-->
+            </div>
+        </section>
+
+        <section class ="Interests">
+            <h3>My Interests</h3><!--Interests go here-->
+            <div class =InterestsBlurb>
+                <p>My Interests include downhill skiing, learning new skills, Making things, Wargaming, studying at the University of life.</p>
             </div>
         </section>
 
