--- a/Index.html
+++ b/Index.html
@@ -63,7 +63,7 @@
                 <!--the photo is mandatory for the assignment-->
             </Section class="SidebarLinks">
             <ul class="SocialLinks">
-                <li class="SocialLinks">
+                <li class="SocialLinks"><!--at some point this will have to be real and hardened against web scraping tools to avoid getting a mountain of spam-->
                     <a href="mailto:placeholder@email.com"><img class="emailIcon" src="./Icons for links/emailIcon.png" width=20></a></li>
                 <!--Email link-->
                 <li class="SocialLinks">
