added contact details section with placeholder details to aboutMe page, just in case the ones alreay present weren't enough

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -72,5 +72,13 @@
             </div>
         </section>
 
+        <section class ="contactMe"><!--Contact details (again)-->
+            <h3>Contact Me</h3>
+            <div class ="ContactDetails">
+                <p>Phone: 0456 789 123</p><!--Placeholders-->
+                <p>Email: placeholder@email.com</p>
+            </div>
+        </section>
+
 </body>
 </html>
