added icon to html files, added medi abreakpoints

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Martin Olson">
     <meta name="description" content="Martin Olsons Portfolio">
+    <link rel="icon" href="PlaceholderCats/A cat.jpg" type="image/jpg"><!--adds the icon to the tab, copy pasted to all the html pages-->
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
