renamed the blog, more comments in the style sheet

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <title>Martin Olson's Blog from 1998</title>
+    <title>Martin Olson's Blog</title>
 </head>
 <body>
     <header class="Heading">
