--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Martin Olson">
     <meta name="description" content="Martin Olsons Portfolio">
-    <link rel="icon" href="PlaceholderCats/A cat.jpg" type="image/jpg"><!--adds the icon to the tab, copy pasted to all the html pages-->
+    <link rel="icon" href="PlaceholderCats/A_cat.jpg" type="image/jpg"><!--adds the icon to the tab, copy pasted to all the html pages-->
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,10 +21,10 @@
        
         <div class="Logo">
             <!--this to be the logo-->
-            <Span class="initalsLogo">
+            <div class="initalsLogo">
             <h4 class="abbreviatedInitialsM">Martin</h4>
             <h4 class="abbreviatedInitialsO">Olson</h4>
-            </Span>
+            </div>
             <!--<h3 class="nameInTitle">Martin Olson</h3>-->
         </div>
         <div class="Navigation">
@@ -62,22 +62,25 @@
                 <!--Maybe send the photo to the logo?-->
                 <img class="photoOfMe" src="./Photos/professionalPhoto.png" alt="MoreProfessionalPhoto" width=90>
                 <!--the photo is mandatory for the assignment-->
-            </Section class="SidebarLinks">
+            </Section>
+            <Section class="SidebarLinks">
             <ul class="SocialLinks">
                 <li class="SocialLinks"><!--at some point this will have to be real and hardened against web scraping tools to avoid getting a mountain of spam-->
-                    <a href="mailto:placeholder@email.com"><img class="emailIcon" src="./Icons for links/emailIcon.png" width=20></a></li>
+                    <a href="mailto:placeholder@email.com"><img class="emailIcon" src="./IconsForLinks/emailIcon.png" alt="email Icon" width=20></a></li>
                 <!--Email link-->
                 <li class="SocialLinks">
-                    <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./Icons for links/GithubLogo.png" width=20></a>
+                    <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./IconsForLinks/GithubLogo.png" alt="github Icon" width=20></a>
                 </li>
                 <!--links are fine, make these icons-->
                 <li class="SocialLinks">
-                    <a href="https://www.linkedin.com/in/olsonmartin/"><img class="linkedInLogo" src="./Icons for links/linkedinicon.png" width=20></a>
+                    <a href="https://www.linkedin.com/in/olsonmartin/"><img class="linkedInLogo" src="./IconsForLinks/linkedinicon.png" alt="Linkedin Icon" width=20></a>
                 </li>
                 <li class="SocialLinks">
-                    <a href="Martin Olson CV updated Jan02.pdf"><img class="pdfLogo" src="./Icons for links/pdfIcon.png" width=20></a>
+                    <a href="MartinOlsonCVUpdatedJan02.pdf"><img class="pdfLogo" src="./IconsForLinks/pdfIcon.png" alt ="pdf Icon" width=20></a>
                 </li>
             </ul>
+            </Section>
+
         </div>
     </main>
 
