--- a/MyProjects.html
+++ b/MyProjects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="PlaceholderCats/A cat.jpg" type="image/jpg">
+    <link rel="icon" href="PlaceholderCats/A_cat.jpg" type="image/jpg">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,10 +15,10 @@
 <header class="Heading">
     <div class="Logo">
         <!--this to be the logo-->
-        <Span class="initalsLogo"><!--no long the initials-->
+        <Div class="initalsLogo"><!--no long the initials-->
         <h4 class="abbreviatedInitialsM">Martin</h4>
         <h4 class="abbreviatedInitialsO">Olson</h4>
-        </Span>
+        </Div>
         <!--<h3 class="nameInTitle">Martin Olson</h3>-->
     </div>
     <div class="Navigation">
@@ -29,7 +29,7 @@
         <!--delete Me once the project is submitted-->
     </div>
     </header>
-<body>
+<Div class = "MainBody">
     <!--projects need to  have live sites and links to the source code-->
     <h3 class ="PortfolioProjectTitleSection"> My Projects</h3>
 
@@ -37,21 +37,21 @@
        
         <section Class="PortfolioProject"><!--each of these sections is a box for a project, and apart from the picture is identical-->
             <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4><!--Self explanatory-->
-            <div class="PortfolioProjectPicture"><img class="PortfolioPic" src="./PlaceholderCats/cat on keyboard.jpg" alt="an adorable placeholder cat" width =220></div><!--I feel like pictures of cats on computers are weirdly appropriate for this-->
+            <div class="PortfolioProjectPicture"><img class="PortfolioPic" src="./PlaceholderCats/cat_on_keyboard.jpg" alt="an adorable placeholder cat" width =220></div><!--I feel like pictures of cats on computers are weirdly appropriate for this-->
             <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p><!--placeholder text-->
             <p class="PortfolioProjectLinks"><!--links to the project source code and the live site. or they would be-->
-                <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./Icons for links/GithubLogo.png" width=30></a><!--This should link direct to the github for the project, but, as this is a placeholder, it doesnt-->
-                <a href="https://google.com"><img class ="externalLinkIcon" src ="./Icons for links/externalLinkIcon.png" width=30></a><!--Again, this is a placeholder link to where the live version of the website would have to be, so for now it goes to google-->
+                <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./IconsForLinks/GithubLogo.png" alt="Github Logo"  width=30></a><!--This should link direct to the github for the project, but, as this is a placeholder, it doesnt-->
+                <a href="https://google.com"><img class ="externalLinkIcon" src ="./IconsForLinks/externalLinkIcon.png" alt="PlaceholderLink" width=30></a><!--Again, this is a placeholder link to where the live version of the website would have to be, so for now it goes to google-->
             </p>
         </section>
 
         <section Class="PortfolioProject">
             <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4>
-            <div class="PortfolioProjectPicture"><img class="PortfolioPic" src="PlaceholderCats/cat on keyboard2.jpg" alt="an adorable placeholder cat" width =220></div>
+            <div class="PortfolioProjectPicture"><img class="PortfolioPic" src="PlaceholderCats/cat_on_keyboard2.jpg" alt="an adorable placeholder cat" width =220></div>
             <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
             <p class="PortfolioProjectLinks">
-                <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./Icons for links/GithubLogo.png" width=30></a><!--This should link direct to the github for the project, but, as this is a placeholder, it doesnt-->
-                <a href="https://google.com"><img class ="externalLinkIcon" src ="./Icons for links/externalLinkIcon.png" width=30></a><!--Again, this is a placeholder link to where the live version of the website would have to be, so for now it goes to google-->
+                <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./IconsForLinks/GithubLogo.png" alt="GithubLogo" width=30></a><!--This should link direct to the github for the project, but, as this is a placeholder, it doesnt-->
+                <a href="https://google.com"><img class ="externalLinkIcon" src ="./IconsForLinks/externalLinkIcon.png" alt="PlaceholderLink" width=30></a><!--Again, this is a placeholder link to where the live version of the website would have to be, so for now it goes to google-->
             </p>
         
         </section>
@@ -61,8 +61,8 @@
             <div class="PortfolioProjectPicture"><img class="PortfolioPic" src="PlaceholderCats/Cat_keyboard3.jpg" alt="an adorable placeholder cat" width =220></div>
             <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
             <p class="PortfolioProjectLinks">
-                <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./Icons for links/GithubLogo.png" width=30></a><!--This should link direct to the github for the project, but, as this is a placeholder, it doesnt-->
-                <a href="https://google.com"><img class ="externalLinkIcon" src ="./Icons for links/externalLinkIcon.png" width=30></a><!--Again, this is a placeholder link to where the live version of the website would have to be, so for now it goes to google-->
+                <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./IconsForLinks/GithubLogo.png" alt="GithubLogo" width=30></a><!--This should link direct to the github for the project, but, as this is a placeholder, it doesnt-->
+                <a href="https://google.com"><img class ="externalLinkIcon" src ="./IconsForLinks/externalLinkIcon.png" alt="PlaceholderLink" width=30></a><!--Again, this is a placeholder link to where the live version of the website would have to be, so for now it goes to google-->
             </p>
         </section>
 
@@ -71,18 +71,18 @@
             <div class="PortfolioProjectPicture"><img class="PortfolioPic" src="PlaceholderCats/Keyboard-cat-4.jpg" alt="an adorable placeholder cat" width=220></div>
             <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
             <p class="PortfolioProjectLinks">
-                <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./Icons for links/GithubLogo.png" width=30></a><!--This should link direct to the github for the project, but, as this is a placeholder, it doesnt-->
-                <a href="https://google.com"><img class ="externalLinkIcon" src ="./Icons for links/externalLinkIcon.png" width=30></a><!--Again, this is a placeholder link to where the live version of the website would have to be, so for now it goes to google-->
+                <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./IconsForLinks/GithubLogo.png" alt="GithubLogo" width=30></a><!--This should link direct to the github for the project, but, as this is a placeholder, it doesnt-->
+                <a href="https://google.com"><img class ="externalLinkIcon" src ="./IconsForLinks/externalLinkIcon.png" alt="PlaceholderLink" width=30></a><!--Again, this is a placeholder link to where the live version of the website would have to be, so for now it goes to google-->
             </p>
         </section>      
 
         <section Class="PortfolioProject">
             <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4>
-            <div class="PortfolioProjectPicture"><img class="PortfolioPic" src="PlaceholderCats/placeholder keyboard cat 5.jpg" alt="an adorable placeholder cat" width=220></div>
+            <div class="PortfolioProjectPicture"><img class="PortfolioPic" src="PlaceholderCats/placeholder_keyboard_cat_5.jpg" alt="an adorable placeholder cat" width=220></div>
             <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
             <p class="PortfolioProjectLinks">
-                <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./Icons for links/GithubLogo.png" width=30></a><!--This should link direct to the github for the project, but, as this is a placeholder, it doesnt-->
-                <a href="https://google.com"><img class ="externalLinkIcon" src ="./Icons for links/externalLinkIcon.png" width=30></a><!--Again, this is a placeholder link to where the live version of the website would have to be, so for now it goes to google-->
+                <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./IconsForLinks/GithubLogo.png" alt="GithubLogo" width=30></a><!--This should link direct to the github for the project, but, as this is a placeholder, it doesnt-->
+                <a href="https://google.com"><img class ="externalLinkIcon" src ="./IconsForLinks/externalLinkIcon.png" alt="PlaceholderLink" width=30></a><!--Again, this is a placeholder link to where the live version of the website would have to be, so for now it goes to google-->
             </p>
         </section>
 
@@ -91,11 +91,11 @@
             <div class="PortfolioProjectPicture"><img class="PortfolioPic" src="PlaceholderCats/placeholdercat6.jpg" alt="an adorable placeholder cat" width =220></div>
             <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
             <p class="PortfolioProjectLinks">
-                <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./Icons for links/GithubLogo.png" width=30></a><!--This should link direct to the github for the project, but, as this is a placeholder, it doesnt-->
-                <a href="https://google.com"><img class ="externalLinkIcon" src ="./Icons for links/externalLinkIcon.png" width=30></a><!--Again, this is a placeholder link to where the live version of the website would have to be, so for now it goes to google-->
+                <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./IconsForLinks/GithubLogo.png" alt="GithubLogo" width=30></a><!--This should link direct to the github for the project, but, as this is a placeholder, it doesnt-->
+                <a href="https://google.com"><img class ="externalLinkIcon" src ="./IconsForLinks/externalLinkIcon.png" alt="PlaceholderLink" width=30></a><!--Again, this is a placeholder link to where the live version of the website would have to be, so for now it goes to google-->
             </p>
         </section>
 
     </section>
-</body>
+</Div>
 </html>
