--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="PlaceholderCats/A cat.jpg" type="image/jpg">
+    <link rel="icon" href="PlaceholderCats/A_cat.jpg" type="image/jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -15,10 +15,10 @@
     <header class="Heading">
         <div class="Logo">
             <!--this to be the logo-->
-            <Span class="initalsLogo">
+            <div class="initalsLogo">
             <h4 class="abbreviatedInitialsM">Martin</h4>
             <h4 class="abbreviatedInitialsO">Olson</h4>
-            </Span>
+            </div>
             <!--<h3 class="nameInTitle">Martin Olson</h3>-->
         </div>
         <div class="Navigation">
