--- a/Index.html
+++ b/Index.html
@@ -9,11 +9,11 @@
     <link rel="icon" href="PlaceholderCats/A_cat.jpg" type="image/jpg"><!--adds the icon to the tab, copy pasted to all the html pages-->
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin ="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <!--Need a real font-->
     <title>Martin Olson</title>
-
+<!---->
 </head>
 
 <body>
