SRI implemented with a SHA512 hash across all 4 HTML pages for the stylesheet

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="PlaceholderCats/A_cat.jpg" type="image/jpg">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"integrity="sha512-Y0MPzizw8R3lkXeLPLFRDvFq8Oa0/Q2PtQzIu04GyUWYR9ClhJuejcdJxpzEG9IMq7+xqn24kaZhJ/SIRLcAeQ=="crossOrigin="anonymous"><!--Implements a sha512 hash SRI for the stylesheet. this has broken CSS display direct from the file-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
