--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Martin Olson">
     <meta name="description" content="Martin Olsons Portfolio">
     <link rel="icon" href="PlaceholderCats/A_cat.jpg" type="image/jpg"><!--adds the icon to the tab, copy pasted to all the html pages-->
-    <link rel="stylesheet" href="styles.css" integrity="sha512-Y0MPzizw8R3lkXeLPLFRDvFq8Oa0/Q2PtQzIu04GyUWYR9ClhJuejcdJxpzEG9IMq7+xqn24kaZhJ/SIRLcAeQ=="crossOrigin="anonymous">
+    <link rel="stylesheet" href="styles.css" integrity="sha512-Y0MPzizw8R3lkXeLPLFRDvFq8Oa0/Q2PtQzIu04GyUWYR9ClhJuejcdJxpzEG9IMq7+xqn24kaZhJ/SIRLcAeQ=="crossOrigin="anonymous"><!--Implements a sha512 SRI hash for the stylesheet. this has broken CSS display direct from the file-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin ="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
