--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="styles.css"integrity="sha512-Y0MPzizw8R3lkXeLPLFRDvFq8Oa0/Q2PtQzIu04GyUWYR9ClhJuejcdJxpzEG9IMq7+xqn24kaZhJ/SIRLcAeQ=="crossOrigin="anonymous"><!--Implements a sha512 SRI hash for the stylesheet. this has broken CSS display direct from the file-->
+    <link rel="stylesheet" href="styles.css"><!--Implements a sha512 SRI hash for the stylesheet. this has broken CSS display direct from the file-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="PlaceholderCats/A_cat.jpg" type="image/jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
