extended SRI to all html pages with the stylesheet

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="styles.css"><!--Implements a sha512 SRI hash for the stylesheet. this has broken CSS display direct from the file-->
+    <link rel="stylesheet" href="styles.css" integrity="sha512-Q7YkwC0F20jSUNajAJjxak2AoSzJaGQzbDRrgkShyRvFCpoiQqakCg/FCn/frZULQxbAhDtAcX3TAG/06Fw+zg== sha384-ZAEPwCn5dGMP96cavAr4t/7Xn4fUpIleVmXh7+pYJJO7FODYXuBRQjJ11ZnRk324" crossOrigin="anonymous"><!--SRI set up for the CSS stylesheet with a SHA512 and SHA384. Breaks local machine functionality-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="PlaceholderCats/A_cat.jpg" type="image/jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
