--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Martin Olson">
     <meta name="description" content="Martin Olsons Portfolio">
     <link rel="icon" href="PlaceholderCats/A_cat.jpg" type="image/jpg"><!--adds the icon to the tab, copy pasted to all the html pages-->
-    <link rel="stylesheet" href="styles.css" integrity="sha512-Q7YkwC0F20jSUNajAJjxak2AoSzJaGQzbDRrgkShyRvFCpoiQqakCg/FCn/frZULQxbAhDtAcX3TAG/06Fw+zg== sha384-ZAEPwCn5dGMP96cavAr4t/7Xn4fUpIleVmXh7+pYJJO7FODYXuBRQjJ11ZnRk324" crossOrigin="anonymous">
+    <link rel="stylesheet" href="styles.css" integrity="sha512-Q7YkwC0F20jSUNajAJjxak2AoSzJaGQzbDRrgkShyRvFCpoiQqakCg/FCn/frZULQxbAhDtAcX3TAG/06Fw+zg== sha384-ZAEPwCn5dGMP96cavAr4t/7Xn4fUpIleVmXh7+pYJJO7FODYXuBRQjJ11ZnRk324" crossOrigin="anonymous"><!--SRI set up for the CSS stylesheet with a SHA512 and SHA384. Breaks local machine functionality. also a stackoverflow post said the "crossOrigin" was a necessary spelling-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin ="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
