--- a/AboutMe.html
+++ b/AboutMe.html
@@ -55,6 +55,7 @@
                     <li>CSS</li>
                     <li>Blender</li>
                     <li>Unity</li>
+                    <li>Github</li>
                 </ul>
         </section>
 
