--- a/MyProjects.html
+++ b/MyProjects.html
@@ -22,7 +22,7 @@
         <!--<h3 class="nameInTitle">Martin Olson</h3>-->
     </div>
     <div class="Navigation">
-        <!-- Internal Navbar goes here, change liks for each page-->
+        <!-- Internal Navbar goes here, change links for each page-->
         <h3 class="LandingPageLink"><a class="NavigationLink" href="Index.html">Front Page</a></h3>
         <h3 class="aboutMe"><a class="NavigationLink" href="AboutMe.html">About Me</a></h3>
         <h3 class="myBlog"><a class="NavigationLink" href="blog.html">My Blog</a></h3>
@@ -31,9 +31,9 @@
     </header>
 <Div class = "MainBody">
     <!--projects need to  have live sites and links to the source code-->
-    <h3 class ="PortfolioProjectTitleSection"> My Projects</h3>
+    <h3 class ="PortfolioProjectTitleSection"> My Projects</h3><!--Title-->
 
-    <section class ="PortfolioProjectSection">
+    <section class ="PortfolioProjectSection"><!--flexbox of projects-->
        
         <section Class="PortfolioProject"><!--each of these sections is a box for a project, and apart from the picture is identical-->
             <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4><!--Self explanatory-->
