back to the portfolio. removed links to blog. replaced placeholder projects with actual projects. updated the about me section. next step: complete restyle

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -24,7 +24,7 @@
         <!-- Internal Navbar goes here, change liks for each page-->
         <h3 class="LandingPageLink"><a class="NavigationLink" href="Index.html">Front Page</a></h3>
         <h3 class="myProjects"><a class="NavigationLink" href="MyProjects.html">My Projects</a></h3>
-        <h3 class="myBlog"><a class="NavigationLink" href="blog.html">My Blog</a></h3>
+        
         <!--delete Me once the project is submitted-->
     </div>
     </header>
@@ -53,6 +53,10 @@
                 <ul class="ListOfSkills">
                     <li>HTML</li>
                     <li>CSS</li>
+                    <li>Javascript</li>
+                    <li>JSReact</li>
+                    <li>Ruby</li>
+                    <li>Ruby on Rails</li>
                     <li>Blender</li>
                     <li>Unity</li>
                 </ul>
@@ -61,7 +65,7 @@
         <section class ="Experience">
             <H3>Experience</H3>
             <div class ="experience blurb">
-                <p>Need to get some</p><!--well thats a bit sad-->
+                <p>Completed Coder Academy's Fast Track Bootcamp</p>
             </div>
         </section>
 
@@ -69,14 +73,6 @@
             <h3>My Interests</h3><!--Interests go here-->
             <div class =InterestsBlurb>
                 <p>My Interests include downhill skiing, learning new skills, Making things, Wargaming, studying at the University of life.</p>
-            </div>
-        </section>
-
-        <section class ="contactMe"><!--Contact details (again)-->
-            <h3>Contact Me</h3>
-            <div class ="ContactDetails">
-                <p>Phone: 0456 789 123</p><!--Placeholders-->
-                <p>Email: placeholder@email.com</p>
             </div>
         </section>
 
