--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="Heading">
-       
+
         <div class="Logo">
             <!--this to be the logo-->
             <Span class="initalsLogo">
@@ -30,7 +30,7 @@
             <!-- Internal Navbar goes here, change liks for each page-->
             <h3 class="aboutMe"><a class="NavigationLink" href="AboutMe.html">About Me</a></h3>
             <h3 class="myProjects"><a class="NavigationLink" href="MyProjects.html">My Projects</a></h3>
-            <h3 class="myBlog"><a class="NavigationLink" href="blog.html">My Blog</a></h3>
+
             <!--delete Me once the project is submitted-->
         </div>
     </header>
@@ -63,8 +63,10 @@
                 <!--the photo is mandatory for the assignment-->
             </Section class="SidebarLinks">
             <ul class="SocialLinks">
-                <li class="SocialLinks"><!--at some point this will have to be real and hardened against web scraping tools to avoid getting a mountain of spam-->
-                    <a href="mailto:placeholder@email.com"><img class="emailIcon" src="./Icons for links/emailIcon.png" width=20></a></li>
+                <li class="SocialLinks">
+                    <!--at some point this will have to be real and hardened against web scraping tools to avoid getting a mountain of spam-->
+                    <a href="mailto:placeholder@email.com"><img class="emailIcon" src="./Icons for links/emailIcon.png" width=20></a>
+                </li>
                 <!--Email link-->
                 <li class="SocialLinks">
                     <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./Icons for links/GithubLogo.png" width=20></a>
